pkg_check_modules(PMLOG PmLogLib)
if (PMLOG_FOUND)
    target_include_directories(ihsplay SYSTEM PRIVATE ${PMLOG_INCLUDE_DIRS})
    target_link_libraries(ihsplay PRIVATE ${PMLOG_LIBRARIES})
    target_sources(ihsplay PRIVATE app_logging_pmlog.c)
else ()
    target_sources(ihsplay PRIVATE app_logging_stdio.c)
endif ()
target_sources(ihsplay PRIVATE app_logging_common.c)